@@ -107,14 +107,15 @@
 <DT><I><A HREF="#wso">WIDGET-SPECIFIC OPTIONS</A></I></DT>
 <DD><TABLE CELLSPACING=0 CELLSPACING=0 BORDER=0>
 <TR>
+<TD>&nbsp;&nbsp;<A HREF="#-autocomplete">-autocomplete</A></TD>
 <TD>&nbsp;&nbsp;<A HREF="#-expand">-expand</A></TD>
+</TR>
+<TR>
 <TD>&nbsp;&nbsp;<A HREF="#-height">-height</A></TD>
-</TR>
-<TR>
 <TD>&nbsp;&nbsp;<A HREF="#-modifycmd">-modifycmd</A></TD>
-<TD>&nbsp;&nbsp;<A HREF="#-postcommand">-postcommand</A></TD>
 </TR>
 <TR>
+<TD>&nbsp;&nbsp;<A HREF="#-postcommand">-postcommand</A></TD>
 <TD>&nbsp;&nbsp;<A HREF="#-values">-values</A></TD>
 <TD></TD>
 </TR>
@@ -156,6 +157,15 @@ value is displayed.
 </P>
 <BR><HR WIDTH="50%"><BR>
 <B><A NAME="wso">WIDGET-SPECIFIC OPTIONS</A></B><BR>
+<DL>
+    <DT><A NAME="-autocomplete"><B>-autocomplete</B></A></DT>
+    <DD>
+    Specifies whether or not the combobox should attempt to auto-complete
+    the value in the entry field as the user types.  If true, the combobox
+    will fill in a value that it finds in its value list as the user types
+    into the entry.
+    </DD>
+</DL>
 <DL><DT><A NAME="-expand"><B>-expand</B></A></DT>
 <DD>
 
